--- a/src/assets/styles/tablet.pcss
+++ b/src/assets/styles/tablet.pcss
@@ -6,9 +6,6 @@
       & .logo {
         position: absolute;
         margin-left: 25px;
-          &::after {
-            content: none;
-          }
       }
       & .burger-menu {
         display: none;
@@ -20,6 +17,10 @@
         height: auto;
         padding: 15px;
         justify-content: flex-end;
+        background-color: transparent;
+        &::after {
+          content: none;
+        }
         & ul {
           flex-direction: row;
           align-items: center;
